# substrate-api-client

./: Cargo.toml  rust-toolchain.toml
.github/workflows/: ci.yml
client-keystore/: Cargo.toml
client-keystore/src/: lib.rs
compose-macros/: Cargo.toml
node-api/: Cargo.toml
primitives/: Cargo.toml
src/: lib.rs
src/examples/: example_benchmark_bulk_xt.rs  example_compose_extrinsic_offline.rs  example_event_callback.rs  example_event_error_details.rs  example_generic_extrinsic.rs  example_get_blocks.rs  example_get_existential_deposit.rs
src/std/: mod.rs
src/std/rpc/ws_client/: mod.rs
test-no-std/: Cargo.toml
test_no_std/: Cargo.toml
tutorials/api-client-tutorial/: Cargo.toml
tutorials/api-client-tutorial/src/: main.rs
