[package]
name = "substrate-api-client"
version = "0.6.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
edition = "2021"

[dependencies]
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
log = { version = "0.4", optional = true }
primitive-types = { version = "0.10.1", optional = true, features = ["codec"] }
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }
thiserror = { version = "1.0.30", optional = true }
ws = { version = "0.9.1", optional = true, features = ["ssl"] }
codec = { package = 'parity-scale-codec', version = "2.0.0", default-features = false,  features = ['derive']}

# Substrate dependencies
sp-core = { version = "4.1.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "7e87c08b71ce2247b504fb2ea7d1f979f98705a2", features = ["full_crypto"] }
sp-version = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", rev = "7e87c08b71ce2247b504fb2ea7d1f979f98705a2", package = "sp-version", optional = true }
balances = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", rev = "7e87c08b71ce2247b504fb2ea7d1f979f98705a2", package = "pallet-balances", optional = true }
staking = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", rev = "7e87c08b71ce2247b504fb2ea7d1f979f98705a2", package = "pallet-staking", optional = true }
system = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", rev = "7e87c08b71ce2247b504fb2ea7d1f979f98705a2", package = "frame-system", optional = true }
transaction-payment = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "7e87c08b71ce2247b504fb2ea7d1f979f98705a2", package = "pallet-transaction-payment", optional = true }
sp-rpc = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "7e87c08b71ce2247b504fb2ea7d1f979f98705a2", optional = true }
sp-runtime = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "7e87c08b71ce2247b504fb2ea7d1f979f98705a2" }
support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", package = "frame-support", rev = "7e87c08b71ce2247b504fb2ea7d1f979f98705a2" }
sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "7e87c08b71ce2247b504fb2ea7d1f979f98705a2" }
# new parity repository
metadata = { version = "14.0.0", default-features = false, git = "https://github.com/paritytech/frame-metadata.git", branch = "main", package = "frame-metadata", features = ["v14"] }
# need to add this for the app_crypto macro
sp-application-crypto = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "7e87c08b71ce2247b504fb2ea7d1f979f98705a2", features = ["full_crypto"] }

# local deps
#ac-compose-macros = { path = "compose-macros", default-features = false }
#ac-node-api = { path = "node-api", optional = true }
#ac-primitives = { path = "primitives", default-features = false }

[dev-dependencies]
env_logger = "0.9"
node-template-runtime = { git = "https://github.com/paritytech/substrate.git", rev = "7e87c08b71ce2247b504fb2ea7d1f979f98705a2" }
keyring = { version = "4.1.0-dev", git = "https://github.com/paritytech/substrate.git", rev = "7e87c08b71ce2247b504fb2ea7d1f979f98705a2", package = "sp-keyring" }
clap = { version = "2.33", features = ["yaml"] }


[features]
default = ["std", "ws-client"]
std = [
    "sp-application-crypto/std",
    "sp-core/std",
    "codec/std",
    "metadata/std",
    "sp-version",
    "balances",
    "system",
    "sp-runtime/std",
    "support/std",
    "sp-std/std",
    "serde/std",
    "serde_json",
    "log",
    "hex/std",
    "primitive-types",
    "thiserror",
    "sp-rpc",
    "transaction-payment/std",
    # local deps
#    "ac-compose-macros/std",
#    "ac-node-api",
#    "ac-primitives/std",
]
ws-client = ["ws"]
staking-xt = ["std", "staking"]

# DEPRECATED. might work but too much work to maintain, sorry

# needed for contract example
#[dev-dependencies]
#wabt = "0.10.0"

#[dev-dependencies.contracts]
#git = "https://github.com/paritytech/substrate.git"
#rev = "7e87c08b71ce2247b504fb2ea7d1f979f98705a2"
#package = "pallet-contracts"

#[[example]]
#name = "example_contract"
#path = "src/examples/example_contract.rs"

#[[example]]
#name = "example_custom_storage_struct"
#path = "src/examples/example_custom_storage_struct.rs"
