[package]
name = "substrate-client-keystore"
version = "0.6.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
edition = "2021"

[dependencies]
parking_lot = "0.11.1"
async-trait = "0.1.30"
hex = "0.4"
serde_json = "1.0"

# Substrate dependencies
sp-core = { version = "4.0.0-dev", default-features = false, git = "https://github.com/RealisNetwork/substrate.git", branch = "polkadot-v0.9.9" }
sp-keystore = { version = "0.10.0-dev", git = "https://github.com/RealisNetwork/substrate.git", branch = "polkadot-v0.9.9" }
sc-keystore = { version = "4.0.0-dev", git = "https://github.com/RealisNetwork/substrate.git", branch = "polkadot-v0.9.9" }
sp-keyring = { version = "4.0.0-dev", git = "https://github.com/RealisNetwork/substrate.git", branch = "polkadot-v0.9.9" }
sp-application-crypto = { version = "4.0.0-dev", git = "https://github.com/RealisNetwork/substrate.git", branch = "polkadot-v0.9.9" }

[dev-dependencies]
tempfile = "3.2.0"
