[package]
name = "ac-compose-macros"
version = "0.1.0"
edition = "2021"

[dependencies]
codec = { package = 'parity-scale-codec', version = "2.0.0", default-features = false,  features = ['derive']}
log = { version = "0.4", default-features = false }

# substrate dependencies
sp-runtime = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "7e87c08b71ce2247b504fb2ea7d1f979f98705a2" }
sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "7e87c08b71ce2247b504fb2ea7d1f979f98705a2" }

# local deps
ac-primitives = { path = "../primitives", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "log/std",
    "sp-runtime/std",
    "sp-std/std",
    # local crates
    "ac-primitives/std",
]
