[package]
name = "ac-primitives"
version = "0.1.0"
edition = "2021"

[dependencies]
codec = { package = 'parity-scale-codec', version = "2.0.0", default-features = false,  features = ['derive']}
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }

sp-core = { version = "4.1.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "7e87c08b71ce2247b504fb2ea7d1f979f98705a2" }
sp-runtime = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "7e87c08b71ce2247b504fb2ea7d1f979f98705a2" }
sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "7e87c08b71ce2247b504fb2ea7d1f979f98705a2" }

[features]
default = ["std"]
std = [
    "codec/std",
    "hex/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
]
